fix: Some code check errors/warns are fixed. jakarta.servlet-api:6.0.0 dependency is added.