@@ -22,7 +22,7 @@ import static org.qubership.atp.mia.model.Constants.DEFAULT_PROJECT_NAME;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -75,23 +75,23 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
                 .id(systemId)
                 .name(TEST_SYSTEM_NAME + randomId)
                 .environmentId(envId)
-                .connections(Arrays.asList())
+                .connections(List.of())
                 .build();
         Environment testEnvironment2 = Environment.builder()
                 .projectId(projectId.get())
                 .id(envId)
                 .name(TEST_ENVIRONMENT_NAME + randomId)
-                .systems(Arrays.asList(testSystem2))
+                .systems(Collections.singletonList(testSystem2))
                 .build();
         Project testProject2 = Project.builder()
                 .id(projectId.get())
                 .name(DEFAULT_PROJECT_NAME + randomId)
-                .environments(Arrays.asList(testEnvironment2.getId()))
+                .environments(Collections.singletonList(testEnvironment2.getId()))
                 .build();
         Mockito.when(environmentsService.getEnvironmentsByProject(eq(projectId.get())))
-                .thenReturn(Arrays.asList(testEnvironment2));
+                .thenReturn(List.of(testEnvironment2));
         Mockito.when(environmentsService.getEnvironmentsFull(eq(envId), eq(projectId.get()))).thenReturn(testEnvironment2);
-        Mockito.when(environmentsService.getProjects()).thenReturn(Arrays.asList(testProject2));
+        Mockito.when(environmentsService.getProjects()).thenReturn(Collections.singletonList(testProject2));
         Mockito.when(environmentsService.getProject(eq(projectId.get()))).thenReturn(testProject2);
         miaContext.setContext(projectId.get(), null);
     }
@@ -133,8 +133,8 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), currentStatement, null);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), currentStatement, null);
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
         Assertions.assertEquals(25, processes.size());
@@ -166,8 +166,8 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), null, null);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), null, null);
         processDto.getProcessSettings().getGlobalVariables().put("globalInput", ":defaultSystem");
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
@@ -203,13 +203,13 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), null, validation);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), null, validation);
         TableMarkerDto tableMarkerDto = new TableMarkerDto();
-        tableMarkerDto.setExpectedResultForQuery(new HashMap<String, String>() {{
+        tableMarkerDto.setExpectedResultForQuery(new HashMap<>() {{
             put("id", "1");
         }});
-        processDto.getProcessSettings().getValidations().get(0).setTableMarker(tableMarkerDto);
+        processDto.getProcessSettings().getValidations().getFirst().setTableMarker(tableMarkerDto);
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
         Assertions.assertEquals(25, processes.size());
@@ -232,7 +232,7 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         Assertions.assertNotNull(executionResponse);
         Assertions.assertEquals(1, executionResponse.getValidations().size());
         Assertions.assertEquals(Statuses.SUCCESS,
-                executionResponse.getValidations().get(0).getTableMarkerResult().getColumnStatuses().get(0).getStatus());
+                executionResponse.getValidations().getFirst().getTableMarkerResult().getColumnStatuses().getFirst().getStatus());
     }
 
     @Test
@@ -245,13 +245,13 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), null, validation);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), null, validation);
         TableMarkerDto tableMarkerDto = new TableMarkerDto();
-        tableMarkerDto.setExpectedResultForQuery(new HashMap<String, String>() {{
+        tableMarkerDto.setExpectedResultForQuery(new HashMap<>() {{
             put("id", "2");
         }});
-        processDto.getProcessSettings().getValidations().get(0).setTableMarker(tableMarkerDto);
+        processDto.getProcessSettings().getValidations().getFirst().setTableMarker(tableMarkerDto);
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
         Assertions.assertEquals(25, processes.size());
@@ -274,7 +274,7 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         Assertions.assertNotNull(executionResponse);
         Assertions.assertEquals(1, executionResponse.getValidations().size());
         Assertions.assertEquals(Statuses.FAIL,
-                executionResponse.getValidations().get(0).getTableMarkerResult().getColumnStatuses().get(0).getStatus());
+                executionResponse.getValidations().getFirst().getTableMarkerResult().getColumnStatuses().getFirst().getStatus());
     }
 
     @Test
@@ -287,11 +287,11 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), null, validation);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), null, validation);
         TableMarkerDto tableMarkerDto = new TableMarkerDto();
         tableMarkerDto.setTableRowCount("1");
-        processDto.getProcessSettings().getValidations().get(0).setTableMarker(tableMarkerDto);
+        processDto.getProcessSettings().getValidations().getFirst().setTableMarker(tableMarkerDto);
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
         Assertions.assertEquals(25, processes.size());
@@ -314,7 +314,7 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         Assertions.assertNotNull(executionResponse);
         Assertions.assertEquals(1, executionResponse.getValidations().size());
         Assertions.assertEquals(Statuses.SUCCESS,
-                executionResponse.getValidations().get(0).getTableMarkerResult().getTableRowCount().getStatus());
+                executionResponse.getValidations().getFirst().getTableMarkerResult().getTableRowCount().getStatus());
     }
 
     @Test
@@ -327,11 +327,11 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), null, validation);
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), null, validation);
         TableMarkerDto tableMarkerDto = new TableMarkerDto();
         tableMarkerDto.setTableRowCount(">1");
-        processDto.getProcessSettings().getValidations().get(0).setTableMarker(tableMarkerDto);
+        processDto.getProcessSettings().getValidations().getFirst().setTableMarker(tableMarkerDto);
         miaConfigurationController.addProcess(projectId.get(), processDto);
         processes = miaConfigurationController.getProcesses(projectId.get()).getBody();
         Assertions.assertEquals(25, processes.size());
@@ -354,7 +354,7 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         Assertions.assertNotNull(executionResponse);
         Assertions.assertEquals(1, executionResponse.getValidations().size());
         Assertions.assertEquals(Statuses.FAIL,
-                executionResponse.getValidations().get(0).getTableMarkerResult().getTableRowCount().getStatus());
+                executionResponse.getValidations().getFirst().getTableMarkerResult().getTableRowCount().getStatus());
     }
 
     @Test
@@ -367,9 +367,9 @@ public class ExecuteSshTest extends BaseIntegrationTestConfiguration {
         UUID sectionId = processes.stream()
                 .filter(processShortDto -> processShortDto.getName().equals("SSH_BG"))
                 .findFirst().get()
-                .getInSections().get(0);
-        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Arrays.asList(sectionId), null, validation);
-        processDto.getProcessSettings().getValidations().get(0).setExportVariables(new HashMap<String, String>() {{
+                .getInSections().getFirst();
+        ProcessDto processDto = getProcess(UUID.randomUUID(), processName, Collections.singletonList(sectionId), null, validation);
+        processDto.getProcessSettings().getValidations().getFirst().setExportVariables(new HashMap<>() {{
             put("var1", "name");
         }});
         processDto.getProcessSettings().getGlobalVariables().put("globalInput", ":var1");
