@@ -84,6 +84,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         ProcessConfiguration processWithMarkers = DeserializerConfigBaseTest.getGenerationPp();
         List<String> passedMarkersList = new ArrayList<>();
         passedMarkersList.add("Process finishing with status \\d+");
+        Assertions.assertNotNull(processWithMarkers.getProcessSettings().getCommand().getMarker());
         processWithMarkers.getProcessSettings().getCommand().getMarker().setPassedMarkerForLog(passedMarkersList);
         List<String> failedMarkersList = new ArrayList<>();
         failedMarkersList.add("Process \\w+ with status ");
@@ -92,6 +93,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         commandResponse.addLog(new CommandOutput("src/test/resources/bill/log.txt", null, true, miaContext.get()));
         when(sshService.get().executeCommandAndGenerateFile(eq(processWithMarkers.getProcessSettings().getCommand()))).thenReturn(commandResponse);
         ExecutionResponse executionResponse = executeProcess(processWithMarkers.getProcessSettings());
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         Assertions.assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
     }
 
@@ -101,11 +103,13 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         String failedMarker = "Process finishing with status \\d";
         List<String> failedMarkersList = new ArrayList<>();
         failedMarkersList.add(failedMarker);
+        Assertions.assertNotNull(processWithMarkers.getProcessSettings().getCommand().getMarker());
         processWithMarkers.getProcessSettings().getCommand().getMarker().setFailedMarkersForLog(failedMarkersList);
         CommandResponse commandResponse = new CommandResponse();
         commandResponse.addCommandOutput(new CommandOutput("src/test/resources/bill/log.txt", null, true, miaContext.get()));
         when(sshService.get().executeCommandAndGenerateFile(eq(processWithMarkers.getProcessSettings().getCommand()))).thenReturn(commandResponse);
         ExecutionResponse executionResponse = super.executeProcess(processWithMarkers.getProcessSettings()); //save and assert
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         Assertions.assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
     }
 
@@ -115,12 +119,14 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         String passedMarker = "Process finishing with status \\d";
         List<String> passedMarkersList = new ArrayList<>();
         passedMarkersList.add(passedMarker);
+        Assertions.assertNotNull(processWithMarkers.getProcessSettings().getCommand().getMarker());
         processWithMarkers.getProcessSettings().getCommand().getMarker().setPassedMarkerForLog(passedMarkersList);
         CommandResponse commandResponse = new CommandResponse();
         commandResponse.addCommandOutput(new CommandOutput("src/test/resources/bill/log.txt", null, true, miaContext.get()));
         when(sshService.get().executeCommandAndGenerateFile(eq(processWithMarkers.getProcessSettings().getCommand()))).thenReturn(commandResponse);
         ExecutionResponse executionResponse = super.executeProcess(processWithMarkers.getProcessSettings());
-        Assertions.assertEquals(executionResponse.getProcessStatus().getStatus(), Statuses.SUCCESS);
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
+        Assertions.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
     }
 
     @Test
@@ -141,7 +147,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         sw.setName("stopOnFail");
         sw.setDisplay("Stop compound if one of processes is fail");
         sw.setValue(false);
-        request.get().setSystemSwitchers(Arrays.asList(sw));
+        request.get().setSystemSwitchers(List.of(sw));
         final LinkedList<ExecutionResponse> responses = executeCompound(compound);
         Assertions.assertEquals(12, responses.size());
     }
@@ -165,22 +171,22 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
         Assertions.assertEquals(1, responses.size());
-        Assertions.assertTrue(responses.get(0).getCommandResponse().getDescription().get(0).contains("SKIPPED Compound"));
-        Assertions.assertEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
+        Assertions.assertTrue(responses.getFirst().getCommandResponse().getDescription().getFirst().contains("SKIPPED Compound"));
+        Assertions.assertEquals("WARNING", responses.getFirst().getProcessStatus().getStatus().name());
     }
 
     @Test
     public void executeCompound_toSkipOneProcess_withProcessReferToInput_WhenInputNotAvailable() {
         CompoundConfiguration compoundConfiguration = DeserializerConfigBaseTest.getDefaultCompound();
-        compoundConfiguration.getProcesses().get(0).getProcessSettings().setReferToInput("toSkip");
+        compoundConfiguration.getProcesses().getFirst().getProcessSettings().setReferToInput("toSkip");
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
         Assertions.assertEquals(8, responses.size());
-        Assertions.assertTrue(responses.get(0).getCommandResponse().getDescription().get(0).contains("SKIPPED process"));
+        Assertions.assertTrue(responses.get(0).getCommandResponse().getDescription().getFirst().contains("SKIPPED process"));
         Assertions.assertNull(responses.get(1).getCommandResponse().getDescription());
         Assertions.assertEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
         Assertions.assertNotEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
-        compoundConfiguration.getProcesses().get(0).getProcessSettings().setReferToInput(null);
+        compoundConfiguration.getProcesses().getFirst().getProcessSettings().setReferToInput(null);
     }
 
     @Test
@@ -190,9 +196,11 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
         Assertions.assertEquals(8, responses.size());
-        Assertions.assertTrue(responses.get(1).getCommandResponse().getDescription().get(0).contains("SKIPPED process"));
+        Assertions.assertTrue(responses.get(1).getCommandResponse().getDescription().getFirst().contains("SKIPPED process"));
         Assertions.assertNull(responses.get(0).getCommandResponse().getDescription());
+        Assertions.assertNotNull(responses.get(1).getProcessStatus());
         Assertions.assertEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
+        Assertions.assertNotNull(responses.get(0).getProcessStatus());
         Assertions.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
         compoundConfiguration.getProcesses().get(1).getProcessSettings().setReferToInput(null);
     }
@@ -205,7 +213,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final LinkedList<ExecutionResponse> responses =
                 executeCompound(compoundConfiguration);
         Assertions.assertEquals(8, responses.size());
-        Assertions.assertTrue(responses.get(1).getCommandResponse().getDescription().get(0).contains("SKIPPED process"));
+        Assertions.assertTrue(responses.get(1).getCommandResponse().getDescription().getFirst().contains("SKIPPED process"));
         Assertions.assertNull(responses.get(0).getCommandResponse().getDescription());
         Assertions.assertEquals("WARNING", responses.get(1).getProcessStatus().getStatus().name());
         Assertions.assertNotEquals("WARNING", responses.get(0).getProcessStatus().getStatus().name());
@@ -239,7 +247,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compoundInRequest.getProcesses().get(1).getProcessSettings().setCommand(Command.builder().values(values).build());
         request.get().setFlowData(miaContext.get().getFlowData());
         request.get().setCompound(CompoundRequest.fromCompoundConfiguration(compoundInRequest));
-        miaContext.get().getConfig().setCompounds(Arrays.asList(compoundInConfig));
+        miaContext.get().getConfig().setCompounds(Collections.singletonList(compoundInConfig));
         miaContext.get().getConfig().setProcesses(compoundInConfig.getProcesses());
         final List<ExecutionResponse> response = compoundService.get().executeCompound(request.get(), null);
         verify(sseEmitterService.get(), times(0)).sendEventWithExecutionResult(any());
@@ -259,7 +267,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compound.getProcesses().get(1).getProcessSettings().setCommand(Command.builder().values(values).build());
         request.get().setFlowData(miaContext.get().getFlowData());
         request.get().setCompound(CompoundRequest.fromCompoundConfiguration(compound));
-        miaContext.get().getConfig().setCompounds(Arrays.asList(compound));
+        miaContext.get().getConfig().setCompounds(List.of(compound));
         miaContext.get().getConfig().setProcesses(compound.getProcesses());
         LinkedList<ExecutionResponse> responses = compoundService.get().executeCompound(request.get(), sseId);
         for (ExecutionResponse r:responses) {
@@ -280,7 +288,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         compound.getProcesses().get(1).getProcessSettings().setCommand(Command.builder().values(values).build());
         request.get().setFlowData(miaContext.get().getFlowData());
         request.get().setCompound(CompoundRequest.fromCompoundConfiguration(compound));
-        miaContext.get().getConfig().setCompounds(Arrays.asList(compound));
+        miaContext.get().getConfig().setCompounds(List.of(compound));
         miaContext.get().getConfig().setProcesses(compound.getProcesses());
         LinkedList<ExecutionResponse> responses = compoundService.get().executeCompound(request.get(), sseId);
         for (ExecutionResponse r:responses) {
@@ -295,10 +303,12 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final CompoundConfiguration compound = CompoundConfiguration.builder()
                 .id(UUID.randomUUID())
                 .name(compoundName)
-                .processes(Arrays.asList(
+                .processes(Collections.singletonList(
                         ProcessConfiguration.builder().name("SQL_GPARAMS")
                                 .processSettings(ProcessSettings.builder()
-                                        .command(Command.builder().values(new LinkedHashSet<String>() {{add("some command");}})
+                                        .command(Command.builder().values(new LinkedHashSet<>() {{
+                                                    add("some command");
+                                                }})
                                                 .build())
                                         .build())
                                 .build()))
@@ -324,7 +334,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         Map<String, String> params = new HashMap<>();
         params.put(input_name, input_value);
         final Command command = new Command("Command", "SSH", TEST_SYSTEM_NAME, listToSet(commandValue));
-        final ArrayList<Prerequisite> prerequisites = new ArrayList<Prerequisite>();
+        final ArrayList<Prerequisite> prerequisites = new ArrayList<>();
         Prerequisite prerequisite = new Prerequisite("COMMAND_ON_LOCALHOST", TEST_SYSTEM_NAME, "echo 123");
         prerequisite.setReferToInputName(Collections.singletonList(input_name));
         prerequisites.add(prerequisite);
@@ -343,9 +353,9 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         miaContext.get().getFlowData().setParameters(params);
         final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue :" + param));
         ArrayList<Prerequisite> prerequisites = new ArrayList<>();
-        final Prerequisite prerequisite1 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 1).setReferToInputName(Arrays.asList("Do update"));
+        final Prerequisite prerequisite1 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 1).setReferToInputName(List.of("Do update"));
         prerequisite1.setName(param + 1);
-        final Prerequisite prerequisite2 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 2).setReferToInputName(Arrays.asList("Do update"));
+        final Prerequisite prerequisite2 = new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue + 2).setReferToInputName(List.of("Do update"));
         prerequisite2.setName(param + 2);
         prerequisites.add(prerequisite1);
         prerequisites.add(prerequisite2);
@@ -360,8 +370,8 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         sqlResponse2.setQuery(sqlPrerequisiteValue + 2);
         sqlResponse2.setData(dbTable2);
         sqlResponse2.setRecords(dbTable2.getData().size());
-        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 1), anyString())).thenReturn(Arrays.asList(new CommandResponse(sqlResponse1)));
-        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 2), anyString())).thenReturn(Arrays.asList(new CommandResponse(sqlResponse2)));
+        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 1), anyString())).thenReturn(List.of(new CommandResponse(sqlResponse1)));
+        when(sqlService.get().executeCommand(eq(sqlPrerequisiteValue + 2), anyString())).thenReturn(List.of(new CommandResponse(sqlResponse2)));
         executeProcess(process);
         Assertions.assertEquals("1", miaContext.get().getFlowData().getParameters().get(param + 1));
         Assertions.assertEquals("3", miaContext.get().getFlowData().getParameters().get(param + 2));
@@ -381,7 +391,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         miaContext.get().getFlowData().setParameters(null);
         final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue"));
         final ArrayList<Prerequisite> prerequisites = new ArrayList<>();
-        prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue).setReferToInputName(Arrays.asList("param")));
+        prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue).setReferToInputName(List.of("param")));
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(0)).executeCommand(eq(sqlPrerequisiteValue), any());
@@ -424,12 +434,12 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
 
     @Test
     public void executePrerequisites_whenReferToInputName_AndInputIsFilled() {
-        miaContext.get().getFlowData().setParameters(new HashMap<String, String>() {{
+        miaContext.get().getFlowData().setParameters(new HashMap<>() {{
             put(input_name, input_value);
         }});
         Input input = new Input(input_name, "type", "value");
         final Command command = new Command("Command", "SSH", TEST_SYSTEM_NAME, listToSet(commandValue));
-        final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).inputs(Arrays.asList(input)).prerequisites(createPrerequisites(true, false)).command(command).build();
+        final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).inputs(List.of(input)).prerequisites(createPrerequisites(true, false)).command(command).build();
         executeProcess(process);
         verify(sqlService.get(), Mockito.times(1)).executeCommand(eq(sqlPrerequisiteValue), any());
         Assertions.assertEquals(commandValue, command.getToExecute());
@@ -451,7 +461,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
     @Test
     public void executePrerequisites_whenReferToInputName_AndReferToComValue_AndComValueIsEqual_InputNotFilled() {
         final Command command = new Command("Command", "SSH", TEST_SYSTEM_NAME, listToSet(commandValue));
-        miaContext.get().getFlowData().setParameters(new HashMap<String, String>() {{
+        miaContext.get().getFlowData().setParameters(new HashMap<>() {{
             put(input_name, "");
             put("other_input_name", "input_value");
         }});
@@ -501,7 +511,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
     @Test
     public void executePrerequisites_whenTypeSQL_thenExecutePrerequisitesFirstAndCommandSecond() {
         final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue"));
-        ArrayList<Prerequisite> prerequisites = new ArrayList<Prerequisite>();
+        ArrayList<Prerequisite> prerequisites = new ArrayList<>();
         prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, "update "));
         prerequisites.add(new Prerequisite("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue));
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
@@ -516,7 +526,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
     public void executePrerequisites_whenTypeNotSupported_thenThrowException() {
         Assertions.assertThrows(PrerequisiteTypeUnsupportedException.class, () -> {
             final Command command = new Command("Command", "SQL", TEST_SYSTEM_NAME, listToSet("commandValue"));
-            ArrayList<Prerequisite> prerequisites = new ArrayList<Prerequisite>();
+            ArrayList<Prerequisite> prerequisites = new ArrayList<>();
             prerequisites.add(new Prerequisite("SOAP", TEST_SYSTEM_NAME, sqlPrerequisiteValue));
             final ProcessSettings process =
                     new ProcessSettings().toBuilder().name(processName).prerequisites(prerequisites).command(command).build();
@@ -611,14 +621,14 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         actualResultForQuery.put("max_bill_seq", "8");
         actualResultForQuery.put("action_dat", "2019-04-19 00:00:00.0");
         final Validation validation = new Validation("SQL", TEST_SYSTEM_NAME, sqlPrerequisiteValue).setTableName("ACCOUNTPAYATTRIBUTES").setTableMarker(new TableMarker().setTableRowCount(">0").setExpectedResultForQuery(expectedResultForQuery));
-        List<Validation> listValidation = Arrays.asList(validation);
+        List<Validation> listValidation = Collections.singletonList(validation);
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).validations(ImmutableList.of(validation)).build();
         final DbTable dbTable = new DbTable(ImmutableList.of("account_num", "bill_seq", "max_bill_seq", "action_dat"), ImmutableList.of(ImmutableList.of("123456", "1", "8", "2019-04-19 00:00:00.0")));
         SqlResponse sqlResponse = new SqlResponse();
         sqlResponse.setQuery(sqlPrerequisiteValue);
         sqlResponse.setData(dbTable);
         sqlResponse.setRecords(dbTable.getData().size());
-        List<SqlResponse> validationResponses = Arrays.asList(sqlResponse);
+        List<SqlResponse> validationResponses = List.of(sqlResponse);
         when(sqlService.get().executeValidations(eq(listValidation), eq(command))).thenReturn(validationResponses);
         ExecutionResponse executionResponse = executeProcess(process);
         Assertions.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
@@ -632,7 +642,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
             expectedResultTableRow.add("---");
             expectedResultTableRow.add("<10");
             expectedResultTableRow.add("2019-04-19 00:00:00.0");
-            Assertions.assertEquals(expectedResultTableRow, validationResponse.getData().getData().get(0));
+            Assertions.assertEquals(expectedResultTableRow, validationResponse.getData().getData().getFirst());
             List<String> actualResultTableRow = new ArrayList<>();
             actualResultTableRow.add("AR");
             actualResultTableRow.addAll(actualResultForQuery.values());
@@ -659,16 +669,17 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         File file = new File("src/main/config/project/default/flow/test1.sql");
         Mockito.doReturn(file).when(fileService.get()).getFile(Mockito.anyString());
         final Validation validation = new Validation("SQL", TEST_SYSTEM_NAME, sqlFileValue).setTableName("ACCOUNT").setTableMarker(new TableMarker().setTableRowCount(">0").setExpectedResultForQuery(expectedResultForQuery));
-        List<Validation> listValidation = Arrays.asList(validation);
+        List<Validation> listValidation = Collections.singletonList(validation);
         final ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).validations(ImmutableList.of(validation)).build();
         final DbTable dbTable = new DbTable(ImmutableList.of("account_num", "bill_seq", "max_bill_seq", "action_dat"), ImmutableList.of(ImmutableList.of("123456", "1", "8", "2019-04-19 00:00:00.0")));
         SqlResponse sqlResponse = new SqlResponse();
         sqlResponse.setQuery(sqlPrerequisiteValue);
         sqlResponse.setData(dbTable);
         sqlResponse.setRecords(dbTable.getData().size());
-        List<SqlResponse> validationResponses = Arrays.asList(sqlResponse);
+        List<SqlResponse> validationResponses = List.of(sqlResponse);
         when(sqlService.get().executeValidations(eq(listValidation), eq(command))).thenReturn(validationResponses);
         ExecutionResponse executionResponse = executeProcess(process);
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         Assertions.assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
         for (SqlResponse validationResponse : executionResponse.getValidations()) {
             for (TableMarkerResult.TableMarkerColumnStatus columnStatus : validationResponse.getTableMarkerResult().getColumnStatuses()) {
@@ -680,8 +691,8 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
             expectedResultTableRow.add("---");
             expectedResultTableRow.add("<10");
             expectedResultTableRow.add("2019-04-19 00:00:00.0");
-            Assertions.assertEquals(expectedResultTableRow, validationResponse.getData().getData().get(0));
-            System.out.println(validationResponse.getData().getData().get(0));
+            Assertions.assertEquals(expectedResultTableRow, validationResponse.getData().getData().getFirst());
+            System.out.println(validationResponse.getData().getData().getFirst());
             List<String> actualResultTableRow = new ArrayList<>();
             actualResultTableRow.add("AR");
             actualResultTableRow.addAll(actualResultForQuery.values());
@@ -695,7 +706,7 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         String expectedBillDate = "2205";
         String accountNumber = "123";
         when(sqlService.get().getNextBillDate()).thenReturn(expectedBillDate);
-        String actualBillDate = executionHelperService.get().getNextBillDate().toString();
+        String actualBillDate = executionHelperService.get().getNextBillDate();
         Assertions.assertEquals(expectedBillDate, actualBillDate);
     }
 
@@ -705,14 +716,14 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final Validation validation = new Validation("SQL", ":customSystem", sqlPrerequisiteValue);
         final Prerequisite prerequisites = new Prerequisite("SSH", ":customSystem", sqlPrerequisiteValue);
         Input input = new Input(input_name, "type", "Billing System");
-        ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).prerequisites(Arrays.asList(prerequisites)).inputs(Arrays.asList(input)).validations(Arrays.asList(validation)).build();
+        ProcessSettings process = new ProcessSettings().toBuilder().name(processName).command(command).prerequisites(List.of(prerequisites)).inputs(List.of(input)).validations(List.of(validation)).build();
         HashMap<String, String> params = new HashMap<>();
         params.put("customSystem", "Billing System");
         miaContext.get().getFlowData().setParameters(params);
         process = executionHelperService.get().replaceProcessSystems(process);
-        Assertions.assertEquals(process.getCommand().getSystem(), "Billing System");
-        Assertions.assertEquals(process.getPrerequisites().get(0).getSystem(), "Billing System");
-        Assertions.assertEquals(process.getValidations().get(0).getSystem(), "Billing System");
+        Assertions.assertEquals("Billing System", process.getCommand().getSystem());
+        Assertions.assertEquals("Billing System", process.getPrerequisites().getFirst().getSystem());
+        Assertions.assertEquals("Billing System", process.getValidations().getFirst().getSystem());
     }
 
     @Test
@@ -732,12 +743,12 @@ public class ProcessServiceTest extends ProcessServiceBaseTest {
         final Prerequisite sshPrerequisite = new Prerequisite("SSH", "Billing System", sshPrerequisiteValue);
         final Prerequisite sqlPrerequisite = new Prerequisite("SQL", "Billing System", sqlPrerequisiteValue);
         if (setCommandReference) {
-            sshPrerequisite.setReferToCommandValue(Arrays.asList(commandValue));
-            sqlPrerequisite.setReferToCommandValue(Arrays.asList(commandValue));
+            sshPrerequisite.setReferToCommandValue(List.of(commandValue));
+            sqlPrerequisite.setReferToCommandValue(List.of(commandValue));
         }
         if (setInputReference) {
-            sshPrerequisite.setReferToInputName(Arrays.asList(input_name));
-            sqlPrerequisite.setReferToInputName(Arrays.asList(input_name));
+            sshPrerequisite.setReferToInputName(List.of(input_name));
+            sqlPrerequisite.setReferToInputName(List.of(input_name));
         }
         prerequisites.add(sshPrerequisite);
         prerequisites.add(sqlPrerequisite);
