@@ -79,30 +79,31 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
         LinkedList<MarkedContent> markedContent =
-                executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+                executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "one more text");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("one more text", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.WARNING);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.WARNING, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "one more text");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("one more text", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.FAIL);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "one more text");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("one more text", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
     }
 
     @Test
@@ -114,29 +115,30 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "one more text");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("one more text", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.WARNING);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.WARNING, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "one more text");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("one more text", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.FAIL);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "one more text");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("one more text", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
     }
 
     @Test
@@ -148,29 +150,30 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(PASSED));
-        assertEquals(Statuses.SUCCESS, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(PASSED));
+        assertEquals(Statuses.SUCCESS, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.WARNING);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.WARNING, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(PASSED));
-        assertEquals(Statuses.SUCCESS, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(PASSED));
+        assertEquals(Statuses.SUCCESS, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.FAIL);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(PASSED));
-        assertEquals(Statuses.SUCCESS, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(PASSED));
+        assertEquals(Statuses.SUCCESS, markedContent.getFirst().getState());
     }
 
     @Test
@@ -180,32 +183,33 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         preparationForParseLogStatus(executionResponse);
         mockContentFile(executionResponse, PATH_WARN_MARKER);
         //action
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         executionResponse.getProcessStatus().getMarker().setFailWhenNoPassedMarkersFound(true);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(WARNING));
-        assertEquals(Statuses.WARNING, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(WARNING));
+        assertEquals(Statuses.WARNING, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.WARNING);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(WARNING));
-        assertEquals(Statuses.WARNING, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(WARNING));
+        assertEquals(Statuses.WARNING, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.FAIL);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(WARNING));
-        assertEquals(Statuses.WARNING, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(WARNING));
+        assertEquals(Statuses.WARNING, markedContent.getFirst().getState());
     }
 
     @Test
@@ -217,29 +221,30 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.WARNING, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(WARNING));
-        assertEquals(Statuses.WARNING, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(WARNING));
+        assertEquals(Statuses.WARNING, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.WARNING);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.WARNING, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(WARNING));
-        assertEquals(Statuses.WARNING, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(WARNING));
+        assertEquals(Statuses.WARNING, markedContent.getFirst().getState());
         //action
         executionResponse.getProcessStatus().setStatus(Statuses.FAIL);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(WARNING));
-        assertEquals(Statuses.WARNING, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), LINE_TO_CHECK.formatted(WARNING));
+        assertEquals(Statuses.WARNING, markedContent.getFirst().getState());
     }
 
     @Test
@@ -249,11 +254,12 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         preparationForParseLogStatus(executionResponse);
         mockContentFile(executionResponse, PATH_ALL_MARKERS);
         //action
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         executionResponse.getProcessStatus().getMarker().setFailWhenNoPassedMarkersFound(true);
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
         assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(FAILED));
         assertEquals(Statuses.FAIL, markedContent.get(0).getState());
@@ -266,7 +272,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
         assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(FAILED));
         assertEquals(Statuses.FAIL, markedContent.get(0).getState());
@@ -279,7 +285,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
         assertEquals(Statuses.FAIL, executionResponse.getProcessStatus().getStatus());
-        markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
         assertEquals(markedContent.get(0).getText(), LINE_TO_CHECK.formatted(FAILED));
         assertEquals(Statuses.FAIL, markedContent.get(0).getState());
@@ -309,11 +315,12 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
     }
 
     @Test
@@ -325,11 +332,12 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), "");
-        assertEquals(Statuses.UNKNOWN, markedContent.get(0).getState());
+        assertEquals("", markedContent.getFirst().getText());
+        assertEquals(Statuses.UNKNOWN, markedContent.getFirst().getState());
     }
 
     @Test
@@ -343,10 +351,10 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
-        assertEquals(markedContent.get(0).getText(), expectedError);
-        assertEquals(Statuses.FAIL, markedContent.get(0).getState());
+        assertEquals(markedContent.getFirst().getText(), expectedError);
+        assertEquals(Statuses.FAIL, markedContent.getFirst().getState());
     }
 
     /**
@@ -363,8 +371,9 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(3, markedContent.size());
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
     }
 
@@ -374,7 +383,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         int expectedAmount = 10;
         ExecutionResponse executionResponse = new ExecutionResponse();
         LinkedList<MarkedContent> markedContent = runParsingLogWithFixedLinesAmount(amount, PATH_WITHOUT_MARKERS, executionResponse)
-                .get(0).getMarkedContent();
+                .getFirst().getMarkedContent();
         assertEquals(expectedAmount, markedContent.size());
     }
 
@@ -383,7 +392,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         int amount = 7;
         ExecutionResponse executionResponse = new ExecutionResponse();
         LinkedList<MarkedContent> markedContent = runParsingLogWithFixedLinesAmount(amount, PATH_WITHOUT_MARKERS, executionResponse)
-                .get(0).getMarkedContent();
+                .getFirst().getMarkedContent();
         assertEquals(amount, markedContent.size());
     }
 
@@ -392,7 +401,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         int amount = 0;
         ExecutionResponse executionResponse = new ExecutionResponse();
         LinkedList<MarkedContent> markedContent = runParsingLogWithFixedLinesAmount(amount, PATH_WITHOUT_MARKERS, executionResponse)
-                .get(0).getMarkedContent();
+                .getFirst().getMarkedContent();
         assertEquals(amount, markedContent.size());
     }
 
@@ -425,6 +434,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogMarkers(executionResponse.getProcessStatus(), command);
         //check
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(expectMarker, executionResponse.getProcessStatus().getMarker());
         assertNotEquals(DeserializerConfigBaseTest.getBgWithMarker().getProcessSettings().getCommand().getMarker(), command.getMarker());
     }
@@ -437,12 +447,13 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //preparation
         ExecutionResponse executionResponse = new ExecutionResponse();
         preparationForParseLogStatus(executionResponse, false);
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         executionResponse.getProcessStatus().setMarker(getMarker(PASSED, "", null));
         mockContentFile(executionResponse, PATH_PASS_MARKER);
         //action
         processStatusRepository.get().parseLogStatus(executionResponse);
         //check result
-        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().get(0).getMarkedContent();
+        LinkedList<MarkedContent> markedContent = executionResponse.getCommandResponse().getCommandOutputs().getFirst().getMarkedContent();
         assertEquals(1, markedContent.size());
         assertEquals(Statuses.SUCCESS, markedContent.getFirst().getState());
         assertEquals(Statuses.SUCCESS, executionResponse.getProcessStatus().getStatus());
@@ -454,6 +465,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         String expectedErr = "passed markers not found and \"Fail when No Passed Markers Found\" flag is true";
         ExecutionResponse executionResponse = new ExecutionResponse();
         preparationForParseLogStatus(executionResponse);
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         executionResponse.getProcessStatus().setMarker(getMarker(PASSED, null, FAILED, true));
         mockContentFile(executionResponse, PATH_WITHOUT_MARKERS);
         //action
@@ -516,6 +528,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         //action
         processStatusRepository.get().parseLogMarkers(executionResponse.getProcessStatus(), command);
         //check
+        Assertions.assertNotNull(executionResponse.getProcessStatus());
         assertEquals(expectMarker, executionResponse.getProcessStatus().getMarker());
     }
 
@@ -539,13 +552,13 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
         String erroredMarker;
         if (marker.getFailedMarkersForLog() != null) {
             erroredMarker = "failed";
-            markerRegex = marker.getFailedMarkersForLog().get(0);
+            markerRegex = marker.getFailedMarkersForLog().getFirst();
         } else if (marker.getWarnMarkersForLog() != null) {
             erroredMarker = "warn";
-            markerRegex = marker.getWarnMarkersForLog().get(0);
+            markerRegex = marker.getWarnMarkersForLog().getFirst();
         } else if (marker.getPassedMarkerForLog() != null) {
             erroredMarker = "passed";
-            markerRegex = marker.getPassedMarkerForLog().get(0);
+            markerRegex = marker.getPassedMarkerForLog().getFirst();
         } else {
             erroredMarker = null;
             markerRegex = null;
@@ -626,7 +639,7 @@ public class ProcessStatusRepositoryTest extends ConfigTestBean {
 
     private ExecutionResponse generateResponseWithCode(boolean checkCodeFlag, String statusCode,
                                                        List<String> expectedCodes) {
-        HashMap<String, String> connectionInfo = new HashMap<String, String>() {{
+        HashMap<String, String> connectionInfo = new HashMap<>() {{
             put("code", statusCode);
         }};
         CommandResponse commandResponse = new CommandResponse();
